src/css/Panels/Navigator/Navigator.css
.workspace .mod-root .workspace-tab-header[data-type="markdown"] .workspace-tab-header-inner-icon {
    display: flex;
}
.workspace .mod-root .workspace-tab-header[data-type="markdown"] .workspace-tab-header-inner-icon svg {
    width: 18px;
    height: 18px;
}

.workspace-tab-header-inner-icon svg,
.workspace-tab-header-inner-icon img {
    width: var(--icon-size);
    height: var(--icon-size);
}

.mk-tree-node {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: var(--row-height);
    transform: translateY(var(--node-offset));
}

.mk-tree-wrapper {
    box-sizing: border-box;
    margin-left: 6px;
    margin-bottom: 1px;
    display: flex;
    align-items: center !important;
    padding: 0;
    position: relative;
    height: var(--spaceRowHeight);
    gap: 4px;
}

.nav-file {
    overflow-y: inherit !important;
}
.nav-file-tag {
    font-size: 7px;
}

.mk-tree-wrapper > div {
    display: flex;
    width: 100%;
    transition: transform 0.2s ease;
}

.mk-dropping .mk-tree-wrapper > div {
    transition: none !important;
}

.mk-focuses {
    position: relative;
}
.mk-focuses > .mk-indicator {
    border-radius: 8px;
    outline: 2px solid var(--mk-ui-active);
}
.mk-focuses > .mk-focuses-item {
    transition: transform 0.2s ease;
}

.mk-tree-wrapper > .mk-indicator-top::before {
    content: " ";
    display: block;
    position: absolute;
    height: 2px;
    border-radius: 1px;
    background: var(--mk-ui-active);
    width: calc(100% - var(--spacing));
    left: var(--spacing);
    top: 0%;
}

.mk-folder-lines .mk-tree-item::before {
    display: block;
    content: " ";
    width: 1px;
    height: var(--childrenCount);
    border-left: 1px solid var(--nav-indentation-guide-color);
    position: absolute;
    top: 34px;
    left: 10px;
}

.mk-tree-wrapper .mk-indicator-row {
    border-radius: 8px;
    outline: 2px solid var(--mk-ui-active);
}

.mk-tree-wrapper.mk-clone {
    display: inline-block;
    pointer-events: none;
    padding: 0;
    padding-left: 10px;
    padding-top: 5px;
}
.mk-tree-wrapper.mk-clone.mk-tree-item {
    --vertical-padding: 5px;
    padding-right: 24px;
    box-shadow: 0px 15px 15px 0 rgba(34, 33, 81, 0.1);
}

.mk-tree-wrapper.mk-ghost {
    opacity: 0.5;
}

.mk-tree-section {
    margin-top: 4px;
    height: var(--spaceSectionHeight);
}

.mk-tree-section .mk-tree-item {
    height: var(--spaceRowHeight);
    padding-left: 4px;
}
.mk-tree-section .is-active.mk-tree-item,
.mk-tree-section .mk-tree-item:hover {
    opacity: 1;
}

.mk-tree-new:hover {
    opacity: 1;
}

.mk-tree-section .mk-collapse {
    --icon-size: 12px;
}
.mk-tree-section .mk-tree-text {
    font-size: 14px;
    display: flex;
    gap: 4px;
    flex-grow: 0 !important;
}
.mk-tree-tag .mk-tree-item {
    padding-left: 4px;
}
.mk-tree-tag .mk-collapse {
    --icon-size: 12px;
}
.mk-tree-tag .mk-tree-text {
    font-size: 14px;
    display: flex;
    gap: 4px;
    flex-grow: 0 !important;
}
.mk-sidebar:hover .mk-tree-new {
    opacity: 0.5;
}

body .mk-tree-new {
    opacity: 0;
}
.mod-rtl .mk-tree-item {
    margin-left: 0 !important;
    margin-right: var(--spacing) !important;
}
.mk-tree-item {
    --icon-size: 16px;
    --icon-container-size: 18px;
    margin-left: var(--spacing) !important;
    flex-direction: row !important;
    --vertical-padding: 2px;
    flex-grow: 1;
    position: relative;
    display: flex;
    align-items: center !important;
    padding: var(--vertical-padding) 2px;
    min-width: 0;
    margin-right: 4px;
    margin-bottom: 2px;
    display: flex;
    border-radius: 4px;
    color: var(--mk-ui-text-secondary);
    font-size: 13px;
    line-height: 1.3;
    gap: 2px;
    height: var(--spaceRowHeight);
}

.workspace-leaf:not(.mod-active) .is-selected {
    background: var(--nav-item-background-active) !important;
}

.workspace-leaf.mod-active .is-highlighted {
    background: var(--nav-item-background-active) !important;
}

.mk-inline-button {
    background: none;
    border: 0;
    box-shadow: none;
    margin: 0;
    height: 24px;
    width: 24px;
    padding: 0 !important;
}

.mk-path-icon {
    width: var(--icon-container-size);
    height: var(--icon-container-size);
    display: flex;
    font-family: emoji;
    align-items: center;
}
.nav-file-title > .mk-path-icon {
    flex: 0 0 var(--icon-size);
}
.mk-path-icon svg,
.mk-path-icon img {
    width: var(--icon-size);
    height: var(--icon-size);
    color: var(--icon-color) !important;
}
.mk-path-icon > button {
    border: 0;
    border-radius: 4px;
    box-shadow: none;
    height: var(--icon-container-size);
    width: var(--icon-container-size);
    padding: 0 !important;
}

.nav-folder-title > .mk-path-icon > button {
    background: var(--label-color);
}

.nav-file-title > .mk-path-icon > button {
    background: none;
}
.nav-file-title > .mk-path-icon > button > svg {
    color: var(--icon-color) !important;
}
.nav-file-title.is-active > .mk-path-icon > button > svg {
    color: var(--icon-color) !important;
}

.mk-tree-text.nav-file-title-content {
    color: var(--label-color);
}

body .mk-tree-wrapper .mk-drag-handle {
    visibility: hidden;
    margin-right: 4px;
}
body .mk-tree-wrapper:hover .mk-drag-handle {
    visibility: visible;
}

body .mk-tree-wrapper .mk-path-link {
    opacity: 0;
}

body .mk-tree-wrapper:hover .mk-path-link {
    opacity: 1;
}

.mk-tree-text {
    padding: 0.15rem 4px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: 13px;
    display: inline-block;
    overflow-wrap: anywhere;
}
.mk-tree-span {
    flex: 1 !important;
}

.mk-path-link {
    vertical-align: middle;
}
.mk-path-link svg {
    width: 12px;
    height: 10px;
    transform: rotate(45deg);
}
.mk-disable-interaction {
    pointer-events: none;
}

.mk-disable-selection,
.mk-clone .mk-tree-text {
    user-select: none;
    -webkit-user-select: none;
}
.workspace-leaf-content[data-type="mk-path-view"] > .view-content {
    padding: 0 !important;
}

.mk-collapse {
    background: none !important;
    border: 0;
    box-shadow: none !important;
    padding: 0 !important;
    min-width: 16px !important;
    width: 16px !important;
    height: 16px !important;
    opacity: 0.4;
    margin-right: 2px;
}
.mk-collapse:hover {
    background: none !important;
    opacity: 1;
}
.mk-collapse svg {
    transform: rotate(90deg);
    transition: transform 250ms ease;
    width: 12px;
    height: 12px;
    margin: 2px;
}

.mod-rtl .mk-collapse.mk-collapsed svg {
    transform: rotate(180deg);
}

.mk-collapse.mk-collapsed svg {
    transform: rotate(0deg);
}
.mk-collapse.mk-collapsed-plus svg {
    transform: rotate(45deg);
}

.mk-tree-item.is-active:not(.clone) {
    --icon-color: var(--nav-item-color-active);
    color: var(--nav-item-color-active);

    background: var(--nav-item-background-active);
}

.mk-icon-menu {
    transform: translate3d(-500px, 0px, 0px);
    z-index: var(--layer-menu);
}
.mk-icon-menu .menu {
    position: static !important;
    padding: 0 !important;
}

.mk-tree-empty {
    padding-left: var(--spacing);
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 13px;
    color: var(--mk-ui-text-tertiary);
}

.mk-progress-bar {
    height: 1px;
    width: 100%;
    overflow: hidden;
}

.mk-progress-bar-value {
    width: 100%;
    height: 100%;
    background-color: var(--mk-ui-active);
    animation: indeterminateAnimation 1s infinite linear;
    transform-origin: 0% 50%;
}

@keyframes indeterminateAnimation {
    0% {
        transform: translateX(0) scaleX(0);
    }
    40% {
        transform: translateX(0) scaleX(0.4);
    }
    100% {
        transform: translateX(100%) scaleX(0.5);
    }
}

